# developer-challenge

./: .gitignore  .tool-versions  README.md  TODO.md  game.html
Testar/: .project
jogo-oito/: .classpath  .gitignore  .project  CMakeLists.txt  README.md  f:w  index.html  package-lock.json  package.json  pom.xml
jogo-oito/java/: README.md
jogo-oito/java/jogo-oito/: .classpath  .project
jogo-oito/src/: App.vue  Coord.cpp  Coord.h  Space.cpp  Space.h  Table.cpp  Table.h  game.cpp  game.h  main.cpp  style.css
jogo-oito/src/assets/: Images.ts
jogo-oito/src/components/: Button.vue  Square.vue
jogo-oito/src/controller/: GameController.ts
jogo-oito/src/controllers/: GameController.ts
jogo-oito/src/di/: GameContainer.ts
jogo-oito/src/interfaces/: Board.ts  Matrix.ts
jogo-oito/src/main/java/: AStar.java  Application.java  BFS.java  Main.java  State.java  readme.md
jogo-oito/src/main/java/application/: Main.java
jogo-oito/src/model/: Board.ts  BoardImpl.ts  Matrix.ts  MatrixImpl.ts
jogo-oito/src/stores/game/: index.ts
jogo-oito/src/test/java/: JogoDosOitoTest.java  TabuleiroTest.java  UITest.java
jogo-oito/src/tests/: board.test.ts  game-controller.test.ts  matrix.test.ts
jogo-oito/src/utils/: Axis.ts  PairOfAxis.ts
jogo-oito/src/views/: Game.vue
jogo-oito/typescript/: README.md  package.json  tsconfig.json
jogo-oito/typescript/src/: index.html  index.ts
jogo-oito/typescript/src/scripts/: DOM.ts  animations.ts  game.ts  render.ts
jogo-oito/typescript/src/styles/: animations.css  responsive.css  structure.css  visual.css
(+374 files in other folders)
